Revert "Refactoring of deprecated Java functions"
This reverts commit ec6f6fe5872715ccc54daf887c273dc862d0a80d.