@@ -52,11 +52,8 @@ public final class BareBonesBrowserLaunch
                         new Class[] {String.class}).invoke(null,
                             new Object[] {url});
                 } else if (osName.startsWith("Windows")) {
-                    String command = 
-                                "rundll32 url.dll,FileProtocolHandler " + url;
-                    ProcessBuilder processBuilder = new ProcessBuilder("cmd",
-                            "/c", command);
-                    processBuilder.start();
+                    Runtime.getRuntime().exec(
+                        "rundll32 url.dll,FileProtocolHandler " + url);
                 } else { //assume Unix or Linux
                     String browser = null;
                     for (String b : browsers) {
